--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html> <!-- Inicio del documento HTML -->
 <head> <!Cabecera: aquí va la configuración de la página -->
 <meta charset="UTF-8"> <!-- Permite usar caracteres especiales como tildes y ñ -->
-<title>Mi primera página</title> <!-- Título que aparece en la pestaña del navegador -
+<title>El Huechuqueo</title> <!-- Título que aparece en la pestaña del navegador -
 ->
 </head>
 <body> <!Cuerpo: todo lo que el usuario verá en la página -->
-<h1>¡Hola, mundo!</h1> <!-- Encabezado principal -->
-<p>Esta es mi primera página web con HTML.</p> <!-- Un párrafo de texto -->
+<h1>Esta es mi historia</h1> <!-- Encabezado principal -->
+<p>Hola me presento, soy benjamín Alejandro Huchuqueo Araya, soy de Santiago de Chile y tengo 22 años actualmente, vivo con mi pareja y mi gato Oreo. Soy estudiante de la universidad mayor y me encuentro finalizando el tercer año de 5, así que me siento muy conforme con mi vida. Mis hobbies son jugar al futbol, jugar videojuegos, escuchar musica, salir con mi novia, la cocina y ver peliculas (como hoobie oculto de vez en cuando escribo).</p> <!-- Un párrafo de texto -->
 </body>
+
 </html> <!-- Fin del documento HTML -->
