--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
 </head>
 <body> <!Cuerpo: todo lo que el usuario verá en la página -->
 <h1>Esta es mi historia</h1> <!-- Encabezado principal -->
-<p>Hola me presento, soy benjamín Alejandro Huchuqueo Araya, soy de Santiago de Chile y tengo 22 años actualmente, vivo con mi pareja y mi gato Oreo. Soy estudiante de la universidad mayor y me encuentro finalizando el tercer año de 5, así que me siento muy conforme con mi vida. Mis hobbies son jugar al futbol, jugar videojuegos, escuchar musica, salir con mi novia, la cocina y ver peliculas (como hoobie oculto de vez en cuando escribo).</p> <!-- Un párrafo de texto -->
+<p>Hola me presento, soy benjamín Alejandro Huchuqueo Araya, soy de Santiago de Chile y tengo 22 años actualmente, vivo con mi pareja y mi gato Oreo. Soy estudiante de la universidad mayor y me encuentro finalizando el tercer año de cinco años, así que me siento muy conforme con mi vida. Mis hobbies son: jugar al futbol, jugar videojuegos, escuchar musica, salir con mi novia, la cocina y ver peliculas (como hoobie oculto de vez en cuando escribo).</p> <!-- Un párrafo de texto -->
+<ul>
+  <li>Jugar al futbol o cualquier deporte en general</li>
+  <li>Jugar videojuegos y completarlos al 100%</li>
+  <li>Escuchar música y también hacer música con mis amigos</li>
+  <li>Ver peliculas y luego hacer criticas de ella</li>
+  <li>Cocinar (voy aprendiendo de a poco)</li>
+  <li>Escribir poesía y cuentos cortos</li>
+</ul>
 </body>
 
 </html> <!-- Fin del documento HTML -->
+
