--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
   <li>Cocinar (voy aprendiendo de a poco)</li>
   <li>Escribir poesía y cuentos cortos</li>
 </ul>
+   <img src="prueba.png">
 </body>
 
 </html> <!-- Fin del documento HTML -->
+
 
