--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
   <li>Cocinar (voy aprendiendo de a poco)</li>
   <li>Escribir poesía y cuentos cortos</li>
 </ul>
-   <img src="prueba.png">
+   <img src="12bbddcb-ba45-4769-ac36-335ad8ed77ad.jfif">
 </body>
 
 </html> <!-- Fin del documento HTML -->
+
 
 
