--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body> <!Cuerpo: todo lo que el usuario verá en la página -->
 <h1>Esta es mi historia</h1> <!-- Encabezado principal -->
-<p>Hola me presento, soy benjamín Alejandro Huchuqueo Araya, soy de Santiago de Chile y tengo 22 años actualmente, vivo con mi pareja y mi gato Oreo. Soy estudiante de la universidad mayor y me encuentro finalizando el tercer año de cinco años, así que me siento muy conforme con mi vida. Mis hobbies son: jugar al futbol, jugar videojuegos, escuchar musica, salir con mi novia, la cocina y ver peliculas (como hoobie oculto de vez en cuando escribo).</p> <!-- Un párrafo de texto -->
+<p>Hola me presento, soy benjamín Alejandro Huchuqueo Araya, soy de Santiago de Chile y tengo 22 años actualmente, vivo con mi pareja y mi gato Oreo. Soy estudiante de la universidad mayor y me encuentro finalizando el tercer año de cinco años, así que me siento muy conforme con mi vida. Mis hobbies son: </p> <!-- Un párrafo de texto -->
 <ul>
   <li>Jugar al futbol o cualquier deporte en general</li>
   <li>Jugar videojuegos y completarlos al 100%</li>
@@ -20,6 +20,7 @@
 </body>
 
 </html> <!-- Fin del documento HTML -->
+
 
 
 
